--- a/EmisorApp/package.json
+++ b/EmisorApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "date-diff": "^0.2.1",
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jwt-simple": "^0.5.5",
