--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-EmisorApp/node_modules/lodash.foreach/README.md
+EmisorApp/node_modules/
+TePagoYaApp/node_modules/
+ComercioApp/node_modules/
+GatewayApp/node_modules/
+RedApp/node_modules/
+AutenticacionApp/node_modules/
+
+
+
+
+
