redis + autenticacion de varios modulos

--- a/TePagoYaApp/package.json
+++ b/TePagoYaApp/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.3.4",
     "nodemod": "^1.5.19",
     "nodemon": "^1.18.4",
+    "redis": "^2.8.0",
     "uid": "0.0.2"
   }
 }
